tests/baselines/reference/FunctionDeclaration8_es6.errors.txt
<<<<<<< HEAD
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,11): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts (1 errors) ====
    var v = { [yield]: foo }
              ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
=======
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,11): error TS1136: Property assignment expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,18): error TS1005: ',' expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,24): error TS1128: Declaration or statement expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,12): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts (4 errors) ====
    var v = { [yield]: foo }
              ~
!!! error TS1136: Property assignment expected.
                     ~
!!! error TS1005: ',' expected.
                           ~
!!! error TS1128: Declaration or statement expected.
               ~~~~~
!!! error TS2304: Cannot find name 'yield'.
>>>>>>> prototypeAsync
